src/views/components/task-view/task-view.scss
@import 'views/styles/shared';

.task-side-view-overlay {
  background: rgba(42, 46, 75, 0.5) !important
}

.task-side-view {
  transition: 0.3s ease-out;
  background: $white;
  overflow-y: auto;
  box-shadow: 0px 0px 10px 0px #999999;
}

.task-view-container {
  background: $white;
  line-height: 1.1em;
  margin-bottom: 4em;
  z-index: 10;
  font-size: 18px;

  .instruction {
    margin-top: 0.5em;
    margin-bottom: 0.4em;
  }

  .instruction-left {
    float: left;
    margin-right: 1em;
  }

  .instruction-right {
    float: right;
    margin-left: 1em;
  }

  .instruction-label {
    margin-top: 0.5em;
    margin-bottom: 0.4em;
  }
}

.task-view-loader {
  min-height: 18.35em;
}

@media screen and (max-width: 767px) {
  .task-view-loader {
    min-height: initial;
    line-height: 0;
  }
}

.task-view-bottom-loader {
  min-height: 23.35em;
}

.task-view {
  padding: 10px 25px;
  overflow-y: auto;

  textarea {
    resize:none;
    font-family: $base-font-family !important;
  }

  input:disabled, select:disabled, textarea:disabled {
    background: none !important;
    color: rgb(84,84,84) !important;
    border: none !important;
    font-size: 18px;
    padding: 5px 0;
    margin: 0;
    font-family: $base-font-family !important;
  }

  input[type='checkbox'] {
    opacity: 1;
    position: relative;
    vertical-align: middle;
  }

  .Select {
    vertical-align: middle;
  }

  .is-disabled {
    .Select-control {
      border: none !important;

      &:hover {
        border: none !important;
      }
    }
  }

  .Select-placeholder {
    color: red
  }

  .Select-value {
    background-color: white;
    padding-right: 0 !important;
  }

  .Select-control {
    width: 200px !important;
    font-size: 18px;


    &:hover {
      border: 1px solid #ccc !important;
    }

  }

  .Select-menu-outer {
    width: 200px !important;
  }

  .button-save {
    margin: 10px 6px;
  }

  .label {
    vertical-align: top;
    margin-top: .7em;
  }

  .is-critical {
    margin-bottom: 10px;
  }

  .task-type {
    margin-top: 0.5em;
    margin-bottom: 0.4em;
  }

  .task-type-left {
    float:left;
  }

  .task-type-right {
    float:right;
  }
}

.changing-input {
  width: 100%; //TODO
  transition: border-color 100ms;
  font-size: 18px;
  height: 35px;
  padding: 5px;
  border: none;
  text-rendering: optimizeSpeed;
  vertical-align: top;
  border-color: white;
  overflow: hidden;
  border-radius: 4px;
}

.editable {
  border: 1px solid #e5dce0;

  &:hover {
    border: 1px solid #d5dce0;
  }
}

.tags-container {
  display: flex;
  clear: both;

  .label {
    padding: 0 0.5em;
  }
}

.tags-container-left {
  flex-direction: row;
}

.tags-container-right {
  flex-direction: row;
}

.react-tagsinput-changing {
  border: 1px solid #ccc;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  overflow: hidden;
  padding: 5px 9px 5px 9px;
  width: 100%;
  display: inline-block;

  input {
    font-size: 18px;
    font-family: $base-font-family;
    width: 200px; //This allows the placeholder and a not to go much beyond line break
  }

  ::placeholder {
    font-size: 18px;
  }
}

.form-input{
  margin:0.4em 0;
}

